--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -209,11 +209,17 @@ li {
         bottom: 30%;
     }
 }
-
+/*IPHONE 6 */
 @media only screen and (max-width: 420px) and (max-height: 800px) {
     .back-button {
-        bottom: 11rem;
+        bottom: 12rem;
     }
+}
+@media only screen and (max-width: 376px) and (max-height: 600px) and (min-width: 300px) and (min-height: 450px){
+    
+    .back-button{
+        bottom: 10rem;
+}
 }
 /*IPHONE 5, SE */
 @media only screen and (max-width: 325px) and (max-height: 570px) {
