--- a/src/styles/WorkOne.scss
+++ b/src/styles/WorkOne.scss
@@ -166,6 +166,42 @@ $solution-text-right: 50%;
     overflow: hidden;
 }
 
+.projects-container {
+    position: fixed;
+    width: 52%;
+    height: 20%;
+    bottom: 25%;
+    left: 50%;
+    margin-bottom: -10%;
+    /* Negative half of height. */
+    margin-left: -25%;
+}
+
+/*DO NOT TOUCH!!!!! UNLESS MAKING CSS RESPONSIVE */
+.lulu-logo {
+    position: absolute;
+    height: auto;
+    width: 14rem;
+    left: -0.5rem;
+    top: 20%;
+}
+
+.kroger-logo {
+    position: absolute;
+    height: auto;
+    width: 8rem;
+    left: 42.5%;
+    top: 0rem;
+}
+
+.sphero-logo {
+    position: absolute;
+    height: auto;
+    width: 12rem;
+    right: 0rem;
+    top: 20%;
+}
+
 @keyframes para-animation {
     from {
         width: 16%;
@@ -174,4 +210,124 @@ $solution-text-right: 50%;
     to {
         width: 0%;
     }
+}
+
+/*IPAD PRO 12.9IN */
+@media only screen and (max-width: 1040px) and (min-width: 950px) and (min-height: 1000px) {
+    .ff-logo-img {
+        right: 4rem;
+    }
+
+    .the-description-text {
+        width: 20rem;
+    }
+
+    .the-role-header {
+        top: 35rem;
+    }
+
+    .the-job-header {
+        top: 38rem;
+    }
+
+    .projects-header {
+        right: 32rem;
+    }
+
+    .kroger-logo {
+        left: 12rem;
+        top: 10rem;
+        transform: scale(1.2)
+    }
+
+    .lulu-logo {
+        top: 21rem;
+        transform: scale(1.3);
+    }
+
+    .sphero-logo {
+        top: 20rem;
+        transform: scale(1.2);
+    }
+
+    .ff-job-details-button a {
+        top: 45rem;
+    }
+}
+
+/*IPAD PRO LANDSCAPE MODE */
+@media only screen and (max-width: 1380px) and (min-width: 1340px) and (max-height:1050px) and (min-height:950px) {
+    .the-description-text {
+        right: 46rem;
+    }
+
+    .the-job-header {
+        right: 46rem;
+    }
+
+    .the-role-header {
+        right: 46rem;
+    }
+}
+
+/* IPAD 4:3 PORTRATE MODE */
+@media only screen and (max-width: 780px) and (min-width: 700px) {
+    .work-title {
+        right: 20rem;
+    }
+
+    .ff-logo-img {
+        left: 18rem;
+    }
+
+    .the-description-text {
+        width: 18rem;
+    }
+
+    .the-role-header {
+        right: 24.5rem;
+    }
+
+    .the-job-header {
+        right: 24.5rem;
+    }
+
+    .kroger-logo {
+        left: 9rem;
+        top: 2rem;
+        transform: scale(0.9)
+    }
+
+    .lulu-logo {
+        top: 10.5rem;
+        transform: scale(0.9);
+    }
+
+    .sphero-logo {
+        top: 10rem;
+        transform: scale(0.9);
+    }
+}
+
+/*IPAD 4:3 LANDSCAPE MODE */
+@media only screen and (max-width: 1040px) and (min-width: 1000px) and (max-height: 780px) {
+    .ff-logo-img {
+        right: 0rem;
+    }
+
+    .kroger-logo {
+        top: 0rem;
+        left: 13rem;
+        transform: scale(0.9);
+    }
+
+    .lulu-logo {
+        top: 5.8rem;
+    }
+
+    .sphero-logo {
+        top: 5rem;
+        transform: scale(0.9);
+    }
+
 }
