--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -232,4 +232,22 @@ li {
         bottom: 8rem;
     }
 }
+/*IPHONE X PORTRAIT */
+@media only screen and (max-width: 390px) and (max-height: 825px) and (min-height: 700px) and (min-width: 350px){
+    .back-button{
+        bottom: 14rem;
+    }
+    .next-button{
+        bottom: 14rem;
+    }
+}
+/*IPHONE 6,7,8 PLUS*/
+@media only screen and (max-width: 420px) and (max-height: 800px) and (min-width: 380px) and (min-height: 650px) {
+    .back-button{
+        bottom: 13.5rem;
+    }
+    .next-button{
+        bottom: 13.5rem;
+    }
+}
 /* KNOWN ISSUE IS THAT SOCAILS BUTTONS DO NOT WORK FOR IPHONE SE/5 IN LANDSCAPE MODE BECAUSE OF SCREEN HEIGHT*/
