--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -208,54 +208,71 @@ li {
     .back-button {
         bottom: 30%;
     }
-    .next-button{
+
+    .next-button {
         bottom: 30%;
     }
 }
+
 /*IPHONE 6 */
 @media only screen and (max-width: 420px) and (max-height: 800px) {
     .back-button {
         bottom: 12rem;
     }
+
     .next-button {
         bottom: 12rem;
     }
 }
-@media only screen and (max-width: 376px) and (max-height: 600px) and (min-width: 300px) and (min-height: 450px){
-    
-    .back-button{
+
+@media only screen and (max-width: 376px) and (max-height: 600px) and (min-width: 300px) and (min-height: 450px) {
+
+    .back-button {
         bottom: 10rem;
+    }
+
+    .next-button {
+        bottom: 10rem;
+    }
 }
-.next-button{
-    bottom: 10rem;
-}
-}
+
 /*IPHONE 5, SE */
 @media only screen and (max-width: 325px) and (max-height: 570px) {
     .back-button {
         bottom: 8rem;
     }
 }
+
 @media only screen and (max-width: 570px) and (max-height: 330px) and (min-height: 200px) {
-    .back-button{
+    .back-button {
         bottom: 8rem;
     }
 }
+
 /*IPHONE X PORTRAIT */
-@media only screen and (max-width: 390px) and (max-height: 825px) and (min-height: 700px) and (min-width: 350px){
-    .back-button{
+@media only screen and (max-width: 390px) and (max-height: 825px) and (min-height: 700px) and (min-width: 350px) {
+    .back-button {
         bottom: 14rem;
     }
-    .next-button{
+
+    .next-button {
         bottom: 14rem;
     }
 }
+
 /*IPHONE 6,7,8 PLUS*/
 @media only screen and (max-width: 420px) and (max-height: 800px) and (min-width: 380px) and (min-height: 650px) {
-    .back-button{
+    .back-button {
         bottom: 13.5rem;
     }
-    .next-button{
+
+    .next-button {
+        bottom: 13.5rem;
+    }
+}
+/*CONVENTIONAL IPHONE 6,7,8 PORTRAIT */
+@media only screen and (max-width: 380px) and (max-height:680px) and (min-width: 300px) and (min-height: 580px){
+    .back-button, .next-button{
         bottom: 13.5rem;
     }
 }
