--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,49 +1,23 @@
-.load:empty{
+.load:empty {
   background-color: #03030C;
-  height: max-content;
+  height: 100%;
   width: 100%;
   overflow-x: hidden;
   margin: 0px;
   padding: 0px;
 
 }
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-p{
+p {
   color: #ffffff;
 }
 
-.click-target{
+.click-target {
   width: 100%;
   height: max-content;
   margin: 0px;
@@ -51,25 +25,29 @@ p{
   overflow-x: hidden;
   overflow-y: hidden;
 }
+
 /* This is specific mobile*/
 @media only screen and (max-width: 600px) {
   p {
     font-size: 0.75rem;
   }
 }
+
 @media only screen and (max-width: 400px) {
   p {
     font-size: 0.6rem;
   }
 }
+
 /* THIS IS SPECIFIC FOR SMALL SMALL ASPECT RATIO PHONES SUCH AS IPHONE 5/SE */
-@media only screen and (max-width: 569px) and (max-height: 321px){
+@media only screen and (max-width: 569px) and (max-height: 321px) {
   p {
     font-size: 0.6rem;
   }
 }
+
 /*THIS IS A SPECIFIC ASPECT RATIO FOR THE IPHONE X BECAUSE IT HAS THE EXTENED SCREEN*/
-@media only screen and (max-width: 850px) and (max-height: 575px){
+@media only screen and (max-width: 850px) and (max-height: 575px) {
   p {
     font-size: 0.6rem;
   }
