--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -2,6 +2,7 @@
 
 %universal-component-layout{
     height: max-content;
+    width: max-content;
     color: #ffffff !important;
     font-family: century-gothic, sans-serif;
     font-weight: 400;
