--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,115 +1,186 @@
 @import url("https://use.typekit.net/ucu5nmz.css");
 @import './Global.scss';
 
-.Home{
-  @extend %universal-component-layout;
-}
-.content{
- text-align: center
-}
-.line-1{ 
+.Home {
+  .Home {
+    @extend %universal-component-layout;
+    height: max-content;
+  }
+
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .col-left {
+    float: left;
+    width: calc(100%/4);
+    height: 30rem;
+  }
+
+  .col-middle {
+    float: left;
+    width: calc(100%/2);
+    margin: 0;
+    align-content: center;
+    background-position: center;
+    height: 100%;
+  }
+
+  .col-right {
+    width: calc(100%/4);
+    height: 1rem;
+  }
+
+  .line-1 {
+    position: absolute;
     z-index: 30;
     display: inline-block;
     width: 30rem;
     margin-block-start: 6rem;
-    border-right: 2px solid rgba(255,255,255,.75);
+    border-right: 2px solid rgba(255, 255, 255, .75);
     text-align: center;
     white-space: nowrap;
     overflow: hidden;
-    transform: translateY(-50%); 
     font-family: century-gothic, sans-serif;
     font-weight: 400;
     font-style: normal;
     cursor: default;
-}
-@media only screen and (max-width: 570px) and (max-height: 350px){
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  /*@media only screen and (max-width: 570px) and (max-height: 350px){
   .line-1{
     margin-block-start: 4rem;
-    position: fixed;
+    position: absolute;
   }
-}
-/* Animation */
-.anim-typewriter{
-  
-  cursor: none;
-  animation: typewriter 4s steps(60) 1s 1 normal both,
-             blinkTextCursor 500ms steps(60) infinite normal;
-}
-@keyframes typewriter{
-  from{width: 0;}
-  to{width: 30rem;}
-}
-@keyframes blinkTextCursor{
-  from{border-right-color: rgba(255,255,255,.75);}
-  to{border-right-color: transparent;}
-}
-.hidden-base-64{
-  transform: rotate(-90deg);
-  position: fixed;
-  left: 16%;
-  top: 26%;
-  font-size: 0.8rem;
-  cursor: vertical-text;
-}
-.Policy-Redirect a{
-  position: fixed;
-  bottom: 2%;
-  right: 10%;
-  color: #ffffff;
-}
-.Policy-Redirect:focus{
-  text-decoration: none;
+}*/
+  /* Animation */
+  .anim-typewriter {
 
-}
-.Policy-Redirect a:hover{
-  color: #450092;
-}
-/*CSSTransition */
-@media only screen and (max-width: 1100px) {
-  .hidden-base-64{
-    left: 10%;
+    cursor: none;
+    animation: typewriter 4s steps(60) 1s 1 normal both,
+      blinkTextCursor 500ms steps(60) infinite normal;
   }
-}
-@media only screen and (max-width: 376px) {
-  .hidden-base-64{
-    display: none;
+
+  @keyframes typewriter {
+    from {
+      width: 0;
+    }
+
+    to {
+      width: 30rem;
+    }
   }
-}
-/*THIS IS SPECIFIC FOR IPHONE X IN LANDSCAPE MODE */
-@media only screen and (max-width: 813px) and (max-height: 376px){
-  .hidden-base-64{
-    top: 32%;
+
+  @keyframes blinkTextCursor {
+    from {
+      border-right-color: rgba(255, 255, 255, .75);
+    }
+
+    to {
+      border-right-color: transparent;
+    }
   }
-}
-/*THIS IS SPECIFIC FOR IPHONE X IN LANDSCAPE MODE */
-@media only screen and (max-width: 737px) and (max-height: 415px){
-  .hidden-base-64{
-    top: 40%;
-    left: 0;
+
+  .hidden-base-64 {
+    transform: rotate(-90deg);
+    position: inherit;
+    font-size: 0.8rem;
+    cursor: vertical-text;
+    margin-top: 20%;
   }
-}
-/*THIS IS SPECIFIC FOR THE DECREASED TEXT SIZE LESS THAN 500PX*/
-@media only screen and (max-width: 500px) {
-  @keyframes typewriter{
-    from{width: 0;}
-    to{width: 22rem;}
-}
-}
-@media only screen and (max-width: 321px) {
-  @keyframes typewriter{
-    from{width: 0;}
-    to{width: 15rem;}
-}
-.Policy-Redirect a{
-  right: 30%;
-}
-}
-@media screen and (max-width:570px) and (max-height:325px) {
-  .line-1{
-    transform: translateX(-40%);
+
+  .Policy-Redirect a {
+    position: absolute;
+    bottom: 2%;
+    right: 10%;
+    color: #ffffff;
   }
-  @keyframes typewriter{
-    from{width: 0;}
-    to{width: 15rem;}
-}
+
+  .Policy-Redirect:focus {
+    text-decoration: none;
+
+  }
+
+  .Policy-Redirect a:hover {
+    color: #450092;
+  }
+
+  /*CSSTransition */
+  @media only screen and (max-width: 1100px) {
+    .hidden-base-64 {
+      left: 10%;
+    }
+  }
+
+  @media only screen and (max-width: 376px) {
+    .hidden-base-64 {
+      display: none;
+    }
+  }
+
+  /*THIS IS SPECIFIC FOR IPHONE X IN LANDSCAPE MODE */
+  @media only screen and (max-width: 813px) and (max-height: 376px) {
+    .hidden-base-64 {
+      top: 32%;
+    }
+  }
+
+  /*THIS IS SPECIFIC FOR IPHONE X IN LANDSCAPE MODE */
+  @media only screen and (max-width: 737px) and (max-height: 415px) {
+    .hidden-base-64 {
+      top: 40%;
+      left: 0;
+    }
+  }
+
+  /*THIS IS SPECIFIC FOR THE DECREASED TEXT SIZE LESS THAN 500PX*/
+  @media only screen and (max-width: 500px) {
+    @keyframes typewriter {
+      from {
+        width: 0;
+      }
+
+      to {
+        width: 22rem;
+      }
+    }
+  }
+
+  @media only screen and (max-width: 321px) {
+    @keyframes typewriter {
+      from {
+        width: 0;
+      }
+
+      to {
+        width: 15rem;
+      }
+    }
+
+    .Policy-Redirect a {
+      right: 30%;
+    }
+  }
+
+  @media screen and (max-width:570px) and (max-height:325px) {
+    .line-1 {
+      transform: translateX(-40%);
+    }
+
+    @keyframes typewriter {
+      from {
+        width: 0;
+      }
+
+      to {
+        width: 15rem;
+      }
+    }
+  }
 }
