--- a/src/styles/HomeImage.css
+++ b/src/styles/HomeImage.css
@@ -1,8 +1,7 @@
 @import url("https://use.typekit.net/ucu5nmz.css");
-
+@import './Global.scss';
 .Home-Image {
-    height: max-content;
-    background-color: #04040c;
+
     color: #ffffff !important;
     font-family: century-gothic, sans-serif;
     font-weight: 400;
@@ -24,25 +23,24 @@
 
 .landing-img {
     background-image: url(../assets/landing_page.svg);
-    position: fixed;
-    left: 50%;
-    transform: translateX(-25%);
-    margin-block-start: 0rem;
+    background-position: center;
+    position: absolute;
+    margin-block-start: 7rem;
     text-align: center;
     align-self: center;
-    width: 100%;
-    height: 30rem;
+    width: 55%;
+    height: 70%;
     cursor: default;
     background-repeat: no-repeat;
     background-size: contain;
-    z-index: 1;
 }
 
 .generating-text {
     cursor: none;
     text-decoration: underline;
 }
-/* THIS IS SPECIFIC FOR THE IPAD PRO */
+
+/* THIS IS SPECIFIC FOR THE IPAD PRO 
 @media only screen and (max-width: 1080px) and (max-height: 1370px) {
     .landing-img {
         background-image: url(../assets/landing_page_responsive_iPadProV2.svg);
@@ -60,7 +58,7 @@
         transform: translateX(-20%)
     }
   }
-/* THIS IS SPECIFIC FOR THE TRADITIONAL IPAD */
+/* THIS IS SPECIFIC FOR THE TRADITIONAL IPAD 
 @media screen and (max-width: 1025px) and (max-height:769px) {
     .landing-img{
         transform: translateX(-20%)
@@ -78,7 +76,7 @@
         transform: translateX(-48%)
     }
 }
-/* THIS IS SPECIFIC FOR THE IPHONE X */
+/* THIS IS SPECIFIC FOR THE IPHONE X 
 @media only screen and (max-width: 376px) {
     .landing-img {
         background-image: url(../assets/landing_page_responsive_iPadProV2.svg);
@@ -127,3 +125,4 @@
         height: 70%;
     }
   }
+  */
