--- a/src/styles/Loading.css
+++ b/src/styles/Loading.css
@@ -8,6 +8,7 @@
     font-weight: 400;
     font-style: normal;
     cursor: wait;
+    z-index: 1;
 }
 .loading-percentage{
     color: #ffffff !important;
@@ -20,12 +21,13 @@
     font-weight: 400;
     font-style: normal;
     font-size: 2.5rem;
+    z-index: 99;
 }
 .loading-bar-inner{
-    height: 20px;
+    height: 0.6rem;
     background-color: #34639B !important;
     width: 10%;
-    z-index: 99;
+    z-index: 1;
     position: absolute;
     top: 50%;
 }
