--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,3 +17,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+html{
+  height: 100%;
+}
+.App{
+  height: 100%;
+}
