added more responsive css for home page

--- a/src/styles/Cookie.scss
+++ b/src/styles/Cookie.scss
@@ -8,7 +8,9 @@ $text-right: 35%;
 $text-top: 20%;
 $text-botton: 60%;
 $solution-text-right: 50%;
-
+.cookie-text{
+    text-align: center;
+}
 .cookie-bar {
     position: fixed;
     bottom: 0%;
