--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -112,30 +112,27 @@
   }
 
   /*CSSTransition */
-  @media only screen and (max-width: 1100px) {
+  @media only screen and (max-width: 1080px) and (min-height:770px) {
+    .col-left {
+      width: calc(100%/5);
+    }
+
+    .col-middle {
+      width: calc(100%/(5/3));
+    }
+
+    .col-right {
+      width: calc(100%/5);
+    }
+
     .hidden-base-64 {
-      left: 10%;
+      margin-top: 10rem;
     }
   }
 
-  @media only screen and (max-width: 376px) {
+  @media only screen and (max-width: 470px) and (min-height:540px) {
     .hidden-base-64 {
-      display: none;
-    }
-  }
-
-  /*THIS IS SPECIFIC FOR IPHONE X IN LANDSCAPE MODE */
-  @media only screen and (max-width: 813px) and (max-height: 376px) {
-    .hidden-base-64 {
-      top: 32%;
-    }
-  }
-
-  /*THIS IS SPECIFIC FOR IPHONE X IN LANDSCAPE MODE */
-  @media only screen and (max-width: 737px) and (max-height: 415px) {
-    .hidden-base-64 {
-      top: 40%;
-      left: 0;
+      margin-top: 20rem;
     }
   }
 
