--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -160,7 +160,7 @@
       }
     }
   }
-  @media only screen and (max-width: 610px) {
+  @media only screen and (max-width: 610px) and (min-width: 365px) {
     .line-1{
       overflow-x: hidden;
     }
