--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -20,6 +20,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    overflow-x: hidden;
     position: fixed;
     top: 0;
     width: 100%;
