--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,8 +7,6 @@
   padding: 0px;
 
 }
-
-
 .App-link {
   color: #61dafb;
 }
@@ -19,10 +17,9 @@ p {
 
 .click-target {
   width: 100%;
-  height: max-content;
+  height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;
   overflow-y: hidden;
 }
 
