--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -19,7 +19,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     position: fixed;
     top: 0;
     width: 100%;
