--- a/src/styles/WorkOne.scss
+++ b/src/styles/WorkOne.scss
@@ -17,7 +17,11 @@
     .row::after {
         content: "";
         clear: both;
-        display: table;
+        display: flex;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+        display: inline;
     }
 
     .col-header {
@@ -28,6 +32,7 @@
     }
 
     .work-1-left {
+        box-sizing: border-box;
         float: left;
         width: calc(100%/6);
         height: 1rem;
@@ -39,7 +44,6 @@
         width: calc(100%/3);
         height: 1rem;
         text-align: center;
-
     }
 
     .work-1-right-center {
@@ -209,18 +213,12 @@
         overflow: hidden;
     }
 
-    .projects-container {
-        top: 70%;
-        position: absolute;
-        background-color: blue;
-        height: 10rem;
-    }
-
     .col-1-lower {
         float: left;
         width: calc((100%/3));
         height:10rem;
         text-align: right;
+
     }
 
     .col-2-lower {
@@ -228,11 +226,12 @@
         width: calc(100%/3);
         height: 10rem;
         text-align: center;
+
         
     }
 
     .col-3-lower {
-        float: right;
+        float: left;
         width: calc(100%/3);
         height: 10rem;
         text-align: left;
@@ -269,406 +268,50 @@
             width: 0%;
         }
     }
+    /*CREATE RESPONSIVE CSS FOR WORK ONE SCREEN */
+    @media only screen and (max-width:1080px){
+        .work-1-left{
+            width: 10%
+        }
+        .work-1-right{
+            width: 5%;
+        }
+    }
+    @media only screen and (max-width:1020px){
+        .col-1-lower {
+            width: 100%;
+            text-align: center;
+
+        }
+    
+        .col-2-lower {
+            width: 100%;  
+            text-align: center;
+        }
+    
+        .col-3-lower {
+            width: 100%;
+            text-align: center;
+        }
+        .lulu-logo,.kroger-logo,.sphero-logo{
+            transform: scale(1);
+        }
+        .lulu-logo{
+            top: 30rem;
+            transform: translateX(-6rem);
+        }
+        .sphero-logo{
+            top: 33rem;
+            transform: translateX(-6rem);
+        }
+        .kroger-logo{
+            top: 38rem;
+            transform: translateX(-6rem);
+            margin-block-end: 2rem;
+        }
+    }
 *{
-  /*  box-sizing: border-box;  
-    border: 1px solid blue;*/
-}
-}
-
-/*IPAD PRO 12.9IN 
-@media only screen and (max-width: 1040px) and (min-width: 950px) and (min-height: 1000px) {
-    .ff-logo-img {
-        right: 4rem;
-    }
-
-    .the-description-text {
-        width: 20rem;
-    }
-
-    .the-role-header {
-        top: 35rem;
-    }
-
-    .the-job-header {
-        top: 38rem;
-    }
-
-    .projects-header {
-        right: 32rem;
-    }
-
-    .kroger-logo {
-        left: 12rem;
-        top: 10rem;
-        transform: scale(1.2)
-    }
-
-    .lulu-logo {
-        top: 21rem;
-        transform: scale(1.3);
-    }
-
-    .sphero-logo {
-        top: 20rem;
-        transform: scale(1.2);
-    }
-
-    .ff-job-details-button a {
-        top: 45rem;
-    }
+  /* box-sizing: border-box;  
+    border: 1px solid blue; */} 
 }
 
-
-@media only screen and (max-width: 1380px) and (min-width: 1340px) and (max-height:1050px) and (min-height:950px) {
-    .the-description-text {
-        right: 46rem;
-    }
-
-    .the-job-header {
-        right: 46rem;
-    }
-
-    .the-role-header {
-        right: 46rem;
-    }
-}
-
-
-@media only screen and (max-width: 780px) and (min-width: 700px) {
-    .work-title {
-        right: 20rem;
-    }
-
-    .ff-logo-img {
-        left: 18rem;
-    }
-
-    .the-description-text {
-        width: 18rem;
-    }
-
-    .the-role-header {
-        right: 24.5rem;
-    }
-
-    .the-job-header {
-        right: 24.5rem;
-    }
-
-    .kroger-logo {
-        left: 9rem;
-        top: 2rem;
-        transform: scale(0.9)
-    }
-
-    .lulu-logo {
-        top: 10.5rem;
-        transform: scale(0.9);
-    }
-
-    .sphero-logo {
-        top: 10rem;
-        transform: scale(0.9);
-    }
-}
-
-
-@media only screen and (max-width: 1040px) and (min-width: 1000px) and (max-height: 780px) {
-    .ff-logo-img {
-        right: 0rem;
-    }
-
-    .kroger-logo {
-        top: 0rem;
-        left: 13rem;
-        transform: scale(0.9);
-    }
-
-    .lulu-logo {
-        top: 5.8rem;
-    }
-
-    .sphero-logo {
-        top: 5rem;
-        transform: scale(0.9);
-    }
-
-}
-
-
-@media only screen and (max-width: 390px) and (max-height: 825px) and (min-height: 620px) and (min-width: 350px) {
-    .work-title {
-        left: 9rem;
-        top: 3rem;
-    }
-
-    .ff-logo-img {
-        transform: scale(0.7);
-        top: 4rem;
-        right: -6rem;
-    }
-
-    .the-description-text {
-        right: 4rem;
-        top: 20rem;
-        width: 15rem;
-    }
-
-    .the-role-header {
-        top: 26rem;
-        right: 4.5rem;
-    }
-
-    .the-job-header {
-        top: 28rem;
-        right: 4.5rem;
-        width: 15rem;
-    }
-
-    .ff-job-details-button a {
-        transform: scale(0.7);
-        top: 24rem;
-        left: 2.5rem;
-    }
-
-    .kroger-logo {
-        left: 2.2rem;
-        top: 5rem;
-        transform: scale(0.6);
-    }
-
-    .lulu-logo {
-        top: 11rem;
-        transform: scale(0.7);
-    }
-
-    .sphero-logo {
-        top: 13rem;
-        transform: scale(0.7);
-    }
-
-    .projects-header {
-        display: none;
-    }
-}
-
-
-@media only screen and (max-width: 820px) and (max-height: 400px) and (min-height: 290px) and (min-width: 750px) {
-    .work-title {
-        left: 28rem;
-    }
-
-    .ff-logo-img {
-        transform: scale(0.5);
-        right: 0rem;
-        top: 1rem;
-    }
-
-    .the-description-text {
-        width: 18rem;
-        right: 24rem;
-        top: 5.5em;
-    }
-
-    .the-role-header {
-        transform: scale(0.8);
-        top: 9rem;
-        right: 21.6rem;
-    }
-
-    .the-job-header {
-        transform: scale(0.8);
-        top: 10.5rem;
-        right: 21.6rem;
-    }
-
-    .ff-job-details-button a {
-        transform: scale(0.7);
-        top: 12rem;
-        left: 17.5rem;
-    }
-
-    .projects-header {
-        display: none;
-    }
-
-    .projects-container {
-        top: 16rem;
-    }
-
-    .kroger-logo {
-        transform: scale(0.7);
-    }
-
-    .lulu-logo {
-        top: 2rem;
-        transform: scale(0.8);
-        left: -3rem;
-    }
-
-    .sphero-logo {
-        transform: scale(0.7);
-        right: -4rem;
-    }
-}
-
-
-@media only screen and (max-width: 420px) and (max-height: 800px) and (min-width: 370px) and (min-height: 650px) {
-    .work-title {
-        top: 4rem;
-        left: 10rem;
-    }
-
-    .ff-logo-img {
-        transform: scale(0.7);
-        right: -5rem;
-        top: 6rem;
-    }
-
-    .the-description-text {
-        top: 21rem;
-        right: 5rem;
-        width: 15rem;
-    }
-
-    .the-role-header {
-        top: 34rem;
-        right: 5rem;
-    }
-
-    .the-job-header {
-        top: 36rem;
-        right: 5rem;
-        width: 15rem;
-    }
-
-    .projects-header {
-        display: none;
-    }
-
-    .kroger-logo {
-        display: none;
-    }
-
-    .lulu-logo {
-        display: none;
-    }
-
-    .sphero-logo {
-        display: none;
-    }
-
-    .ff-job-details-button a {
-        transform: scale(0.7);
-        top: 32rem;
-        right: 9rem;
-    }
-}
-
-
-@media only screen and (max-width: 780px) and (max-height: 450px) and (min-width: 650px) and (min-height: 350px) {
-    .work-title {
-        left: 25rem;
-    }
-
-    .ff-logo-img {
-        transform: scale(0.5);
-        left: 13rem;
-        top: 0.8rem;
-    }
-
-    .the-description-text {
-        right: 21rem;
-    }
-
-    .the-role-header {
-        right: 21.5rem;
-    }
-
-    .the-job-header {
-        right: 21.5rem;
-    }
-
-    .ff-job-details-button a {
-        transform: scale(0.7);
-        top: 12.5rem;
-        right: 20rem;
-    }
-
-    .projects-header {
-        display: none;
-    }
-
-    .projects-container {
-        top: 15rem;
-    }
-
-    .kroger-logo {
-        transform: scale(0.7);
-    }
-
-    .sphero-logo {
-        top: 3rem;
-        transform: scale(0.7);
-        right: -3rem;
-    }
-
-    .lulu-logo {
-        top: 3.8rem;
-        transform: scale(0.75);
-        left: -3rem;
-    }
-}
-
-@media only screen and (max-width: 380px) and (max-height:680px) and (min-width: 300px) and (min-height: 580px) {
-    .work-title {
-        top: 2rem;
-        left: 13rem;
-    }
-
-    .ff-logo-img {
-        top: 3rem;
-        left: -5.5rem;
-    }
-
-    .the-description-text {
-        top: 18rem;
-        right: 4rem;
-    }
-
-    .the-role-header {
-        top: 32rem;
-    }
-
-    .the-job-header {
-        top: 34rem;
-    }
-
-    .ff-job-details-button a {
-        top: 28rem;
-    }
-}
-@media only screen and (max-width: 680px) and (max-height:380px) and (min-width: 580px) and (min-height: 300px) {
-    .work-title{
-        left: 22rem;
-    }
-    .ff-logo-img{
-        top: 0rem;
-        left: 9rem;
-        transform: scale(0.4);
-    }
-    .the-description-text{
-        top: 5.3rem;
-        right: 20rem;
-        width: 18rem;
-    }
-    .the-role-header{
-        right: 20.5rem;
-        top: 9rem;
-    }
-    .the-job-header{
-        top: 11rem;
-        right: 20.5rem;
-    }
-}
- iphone viewport size: 375x635 in safari browser */
